--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/watttime_logo" 
+        android:icon="@drawable/ic_launcher" 
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <!-- TODO change name to ic_launcher (wtlogo) -->
         <activity
             android:name="com.github.WattTime.watttime_android.Activities.MainActivity"
             android:label="@string/app_name" >
