--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,9 +15,9 @@
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+<!--  fixme -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher" 
