--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,21 +8,21 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
-    
-    <!--  DEV PERMISSIONS -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- DEV PERMISSIONS -->
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-    
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-<!--  fixme -->
+    <!-- fixme back to 10 at some point -->
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher" 
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/WattTimeTheme" >
         <activity
             android:name="com.github.WattTime.watttime_android.Activities.MainActivity"
             android:label="@string/app_name" >
@@ -32,6 +32,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Information for the widget -->
+        <receiver android:name="WattTimeWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget" />
+        </receiver>
     </application>
 
 </manifest>
